<?xml version="1.0"?>
<package>
  <name>mavros_test</name>
  <version>0.0.0</version>
  <description>The mavros_test package</description>
  <maintainer email="wkyoun@kari.re.kr">wkyoun</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>mavros</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
  </export>
</package>
